style.css
/* ... */
body {
  display: flex;
  justify-content: center;
  height: 100vh;
  overflow-x: hidden;
}
.parallax-bg {
  background: var(--bg-img);
  background-position: top left;
  background-repeat: no-repeat;
  background-size: cover;
  position: fixed;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}
.parallax-content {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  margin-top: 8rem;
  margin-bottom: 10rem;
  overflow: hidden;
}
.nav {
  float: left;
  display: block;
  position: fixed;
  min-height: 10vh;
  max-height: 10vh;
  width: 85vw;
  margin-top: 1rem;
  padding: 0.8rem 0;
  z-index: 2;
  box-shadow: var(--glass-shadow);
  border-radius: 24px;
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
}
.logo-nav-icon {
  height: 3.75rem;
  width: 3.75rem;
}
.burger-menu {
  position: relative;
  display: inline-block;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  padding-left: 0.8rem;
  padding-right: 0.2rem;
  margin-bottom: 0.5rem;
  background-color: var(--glass-cutout-bg);
  border: 0px;
  box-shadow: var(--glass-cutout-shadow);
}
.burger-menu:hover {
  position: relative;
  display: inline-block;
  cursor: pointer;
  width: 45px;
  height: 45px;
  padding-left: 0.8rem;
  padding-right: 0.1rem;
  background-color: var(--glass-cutout-hover-bg);
  border: 0px;
  box-shadow: var(--glass-cutout-hover-shadow);
}
.burger-line1,
.burger-line2,
.burger-line3 {
  height: 0.18rem;
  margin: 0.19rem 0.55rem;
  background-color: rgba(255, 255, 255, 0.3);
  transition: 0.4s;
  box-shadow: inset 1px 2px 1px rgba(255, 255, 255, 0.5),
    1px 2px 3px rgba(0, 0, 0, 1);
}
.card {
  padding: 0%;
  height: 77vh;
  width: 85vw;
  margin-bottom: 2.5rem;
  border-radius: 24px;
  scroll-margin-top: 17vh;
  background-color: transparent;
  border: 0px;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
}
.logo {
  width: 8rem;
  height: 8rem;
  margin-top: 3.5rem;
  color: rgba(0, 0, 0, 0.35);
}
.logo-inner {
  stroke: var(--logo-inner-stroke);
  fill: var(--logo-inner-fill);
  stroke-width: 3.3;
  filter: var(--logo-inner-shadow);
}
.logo-cutout-ring {
  stroke: var(--logo-cutout-stroke);
  fill: var(--logo-cutout-fill);
  stroke-width: 8;
  filter: var(--logo-cutout-shadow);
}
.logo-initials {
  stroke: var(--logo-initials-stroke);
  fill: var(--logo-initials-stroke);
  stroke-width: 0.5;
  filter: var(--logo-initials-shadow);
}
.name {
  font-family: "peignot";
  font-size: 2rem;
  margin-top: 0%;
  margin-bottom: 0rem;
  text-align: center;
  color: var(--text-color);
  letter-spacing: 0.1em;
  text-shadow: var(--text-shadow);
}
.llc {
  font-family: "peignot";
  font-size: 1.2rem;
  text-align: center;
  margin-bottom: 2rem;
  color: var(--text-color);
  letter-spacing: 0.1em;
  text-shadow: var(--text-shadow);
}
.tagline {
  margin: 2rem 0;
  padding: 0 0.5rem;
  font-family: "Poiret";
  font-size: 1.25rem;
  font-weight: bold;
  text-align: center;
  color: var(--text-color);
  letter-spacing: 0.05em;
  text-shadow: var(--text-shadow);
}
.masthead {
  width: 85vw;
  min-height: 50vh;
  max-height: 50vh;
  margin-bottom: 2.5rem;
}
.header {
  color: var(--text-color);
  font-family: Peignot;
  letter-spacing: 0.06em;
  font-size: 1.7rem;
  margin: 0.5rem 0;
  text-shadow: var(--text-shadow);
  text-align: center;
}
.copy {
  font-family: Helvetica, sans-serif;
  letter-spacing: 0.02em;
  font-size: 1.05rem;
  font-weight: 500;
  margin-bottom: 0.2rem;
  color: var(--text-color);
  text-shadow: var(--text-shadow);
}
.icon {
  fill: rgba(0, 0, 0, 0.5);
  text-align: center;
  margin: 0.65rem;
  height: 5rem;
  width: 5rem;
  filter: drop-shadow(1px -1px 2px rgba(255, 242, 215, 0.587));
}
.subheader {
  font-size: 1.1rem;
  font-weight: 500;
  letter-spacing: 0.1em;
  text-align: left;
  margin: 5%;
}
.service-more {
  width: 51%;
  background-color: rgba(0, 0, 0, 0);
  border-width: 0 0px 0.5px 0px;
  border-color: rgba(255, 255, 255, 0.5);
  font-family: Poiret;
  font-size: 1.3rem;
  font-weight: 650;
  color: rgba(193, 179, 142, 0.75);
  filter: drop-shadow(1px 1px 1px #ba9e58c8);
  margin-left: 23%;
  margin-right: 30%;
  margin-top: 0.5rem;
  padding-right: 0.7rem;
}
.contact {
  margin-left: 5%;
  margin-right: 5%;
}
.contact-field {
  margin-left: 3%;
  margin-right: 3%;
  margin-top: 5%;
}
.input-bg {
  color: rgb(255, 255, 255, 0.7);
  width: 100%;
  outline: none;
  background-color: rgb(0, 0, 0, 0.5);
  border-width: 0px;
  border-color: rgba(255, 255, 255, 0.5);
  box-shadow: inset 01px 01px 01px rgba(0, 0, 0, 0.35),
    inset 3px 3px 7px rgba(53, 53, 53, 0.65);
}
input,
textarea,
input:focus,
textarea:focus,
input:autofill,
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  background-color: rgba(255, 255, 255, 0.35);
  color: rgba(0, 0, 0, 1);
  text-shadow: 0 2px 2px #e0bf6c24;
  padding: 3%;
}
.button {
  text-align: center;
  width: 50%;
  margin-left: 25%;
  margin-right: 25%;
  color: rgba(255, 255, 255, 0.7);
  background: rgba(0, 0, 0, 0.075);
}
.glass {
  background: var(--glass-bg-color);
  -webkit-box-shadow: var(--glass-shadow);
  box-shadow: var(--glass-shadow);
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}
.blur-filter {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}
.gradient {
  background: linear-gradient(
    -10deg,
    black,
    black,
    black,
    rgb(170, 170, 170),
    rgb(211, 209, 209),
    grey,
    black,
    black,
    black
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 59px;
  height: 30px;
  box-shadow: var(--glass-cutout-shadow-high-contrast);
}
/* ... */

